--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+     - family: Muli
+       fonts:
+        - asset: assets/fonts/Muli/Muli-Light.ttf
+        - asset: assets/fonts/Muli/Muli-Regular.ttf
+        - asset: assets/fonts/Muli/Muli-Bold.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
