--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_launcher_icons: "^0.7.0"
+  flutter_launcher_icons: ^0.7.0
   http: ^0.12.0
+  webview_flutter: ^0.3.7
 
 dev_dependencies:
   flutter_test:
